# kaiju

./: .aider.model.metadata.json  .aider.model.settings.yml  .env.example  .gitignore  README.md  go-pipeline-runbook.md  package.json  pyproject.toml  run_pipeline.sh  run_pipeline_cpp.sh  run_pipeline_go.sh  run_pipeline_java.sh  run_pipeline_rust.sh  run_pipeline_ts.sh  tsconfig.json
agent/: agent_utils.py  agent_utils_cpp.py  agent_utils_go.py  agent_utils_java.py  agent_utils_ts.py  agents.py  agents_cpp.py  agents_java.py  agents_ts.py  class_types.py  cli.py  cli_cpp.py  config_go.py  config_java.py  run_agent.py  run_agent_go.py  run_agent_java.py  run_agent_no_rich.py  run_agent_ts.py  run_cpp_agent.py  ts_system_prompt.md
commit0/: cli.py  cli_cpp.py  cli_go.py  cli_java.py  cli_ts.py
tools/: batch_prepare.py  batch_prepare_cpp.py  candidates_curated.json  candidates_raw.json  create_dataset.py  create_dataset_cpp.py  create_dataset_go.py  create_dataset_java.py  create_dataset_ts.py  custom_dataset.json  dataset_entries.json  dataset_entries_final.json  discover.py  discover_java.py  generate_test_ids.py  generate_test_ids_cpp.py  generate_test_ids_go.py  generate_test_ids_java.py  generate_test_ids_rust.py  generate_test_ids_ts.py  prepare_repo.py  prepare_repo_cpp.py  prepare_repo_go.py  prepare_repo_java.py  prepare_repo_rust.py  prepare_repo_ts.py  run_test_validation.sh  scrape_pdf.py  stub.py  stub_cpp.py  stub_java.py  stub_ts.ts  stub_ts_runner.py  (+5 more)
tools/cppstubber/: CMakeLists.txt
tools/cppstubber/src/: main.cpp  stubber.cpp  stubber.hpp
(+136 files in other folders)
